Fixed overlapped :100:

--- a/src/css/Card.css
+++ b/src/css/Card.css
@@ -8,11 +8,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 30px 0;
+    margin: 10px 0 30px 0;
     padding: .5rem;
     transition: 0.5s;
     border-radius: 10px;
-    width: 35%; /* Adjust the width as needed */
+    width: 35%;
+    /* Adjust the width as needed */
     font-size: 1.1rem;
 }
 
@@ -23,7 +24,7 @@
 }
 
 .widecard img {
-    width: 35%;
+    width: 40%;
     height: 100%;
     object-fit: cover;
 }
@@ -42,19 +43,19 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 1px;
+    margin-bottom: 50px;
     overflow: hidden;
-    width: 100%;
+    width: 70%;
+    justify-content: center;
 }
 
 .skills ul {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    list-style: none;
     padding: 0;
     margin: 0;
-    list-style: none;
 }
 
 .skills ul li {
@@ -63,7 +64,9 @@
     border-radius: 5px;
     background: #04bade;
     color: #fff;
+    font-size: 1.1rem;
 }
+
 .project {
     display: flex;
     flex-direction: column;
@@ -95,31 +98,32 @@
 
 
 @media screen and (max-width: 768px) {
-    .widecard {
+        .widecard {
         width: 80%;
-    }
+        margin: 10px;
+        }   
 
-    .widecard img {
-        width: 50%;
-    }
+        .widecard img {
+            width: 50%;
+        }
 
-    .Projectcard {
-        width: 90vw;
-    }
+        .Projectcard {
+            width: 90vw;
+        }
 
-    .Projectcard img {
-        width: 50%;
-    }
+        .Projectcard img {
+            width: 50%;
+        }
 
-    .skills {
-        width: 80%;
-        margin-top: 0; /* Remove the margin-top */
-    }
+        .skills {
+            width: 80%;
+            margin-top: 0;
+            /* Remove the margin-top */
+        }
 
-    .skills ul li {
-        margin: 5px;
-        padding: 5px;
-        font-size: 0.8rem;
+        .skills ul li {
+            margin: 5px;
+            padding: 5px;
+            font-size: 0.8rem;
+        }
     }
-}
-
